# fp-lab1

./: README.md
.github/.workflows/: actions.yaml
.github/workflows/: actions.yaml
task26/: dune  dune-project  main.ml  task26.opam
task26/lib/: dune  for.ml  lazy.ml  map_sol.ml  modular.ml  recursive.ml  solution.py  utils.ml
task26/src/: dune  for.ml  lazy.ml  map.ml  modular.ml  recursive.ml  tail_recursive.ml  utils.ml
task26/test/: dune  test_task26.ml
task4/: dune  dune-project  main.ml  task4.opam
task4/lib/: dune  for.ml  lazy.ml  recursive.ml
task4/src/: dune  for.ml  lazy.ml  map.ml  modular.ml  recursive.ml  solution.py  tail_recursive.ml  utils.ml
task4/test/: dune  test_task4.ml
